--- a/screencapturekit/Cargo.toml
+++ b/screencapturekit/Cargo.toml
@@ -32,4 +32,4 @@ once_cell = "1.19.0"
 rodio = "0.18.1"
 screencapturekit-sys = { version = "0.2.8", path = "../screencapturekit-sys" }
 swap-buffer-queue = "0.2.0"
-whisper-rs = { version = "0.11.1", features = ["metal"] }
+whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
