--- a/screencapturekit/Cargo.toml
+++ b/screencapturekit/Cargo.toml
@@ -26,12 +26,15 @@ path = "./src/lib.rs"
 
 [dependencies]
 console = "0.15.8"
+cpal = "0.15.3"
 crossbeam = "0.8.4"
 ctrlc = "3.4.4"
 hound = "3.5.1"
 once_cell = "1.19.0"
 rodio = "0.18.1"
+sdl2 = { version = "0.36.0" }
 screencapturekit-sys = { version = "0.2.8", path = "../screencapturekit-sys" }
 swap-buffer-queue = "0.2.0"
 termion = "4.0.0"
 whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
+
