ci(contrib): split contrib from build jobs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Run Tests
         run: |
           cargo test
+  contrib:
+    on:
+      push:
+        branches:
+          - "main"
+    steps:
       - name: Update Contribute List
         uses: akhilmhdh/contributors-readme-action@v2.3.10
         env:
