ci(contrib): another fix

--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -10,6 +10,7 @@ env:
 
 jobs:
   contrib:
+    runs-on: ubuntu-latest
     steps:
       - name: Update Contribute List
         uses: akhilmhdh/contributors-readme-action@v2.3.10
