--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ path = "./src/lib.rs"
 [features]
 ci = []
 
+
 [dependencies]
-core-media-rs = { git = "https://github.com/doom-fish/core-frameworks.git" }
-core-utils-rs = { git = "https://github.com/doom-fish/core-frameworks.git" }
+core-media-rs = { path = "../core-frameworks/crates/core-media-rs", version = "0.1" }
+core-utils-rs = { path = "../core-frameworks/crates/core-utils-rs", version = "0.1" }
 objc = { version = "0.2", features = ["exception"] }
 block2 = "0.5"
 dispatch = "0.2"
