--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
         run: cargo build --verbose --features ci
       - name: Run Tests
         run: |
-          cargo test --verbose --features ci
+          cargo test
