--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,15 @@ block2 = "0.5"
 dispatch = "0.2"
 core-foundation = { version = "0.10" }
 core-graphics = { version = "0.24" }
+
+console = "0.15.8"
+cpal = "0.15.3"
+crossbeam = "0.8.4"
+ctrlc = "3.4.4"
+hound = "3.5.1"
+once_cell = "1.19.0"
+rodio = "0.18.1"
+sdl2 = { version = "0.36.0" }
+swap-buffer-queue = "0.2.0"
+termion = "4.0.0"
+whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
