save mic_audio progress

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,4 @@ sdl2 = { version = "0.36.0" }
 swap-buffer-queue = "0.2.0"
 termion = "4.0.0"
 whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
+rubato = "0.16.1"
