--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ termion = "4.0.0"
 whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
 rubato = "0.16.1"
 anyhow = "1.0.94"
+clap = "4.5.23"
